--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,8 @@
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
-<title>Обучающая система по дисциплине "Экспертные системы"</title>
+<title>РћР±СѓС‡Р°СЋС‰Р°СЏ СЃРёСЃС‚РµРјР° РїРѕ РґРёСЃС†РёРїР»РёРЅРµ "Р­РєСЃРїРµСЂС‚РЅС‹Рµ СЃРёСЃС‚РµРјС‹"</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 </head>
 
